# claude-model-chorus

./: .coverage.Khans-MacBook-Pro.local.69028.XvKDkRyx  .gitignore  .model-chorusrc.example  .modelchorusrc.example  ARCHITECTURAL_REVIEW.md  BIKE_LANE.md  CHANGELOG.md  FIXES.md  GEMINI_FAILURE_ANALYSIS.md  LEVERAGE_POINTS.md  PR.md  README.md  task-1-1-fidelity-review.md  test_argument_workflow_1.1.1.py  test_argument_workflow_1.1.2.py  test_argument_workflow_1.1.3.py  test_argument_workflow_1.1.4.py  test_argument_workflow_1.1.5.py  test_argument_workflow_1.1.6.py  test_argument_workflow_1.1.7.py  test_argument_workflow_1.2.1.py  test_argument_workflow_1.2.3.py  test_backward_compat.py  test_backward_compatibility.py  test_chat_workflow_2.1.1.py  test_chat_workflow_2.1.2.py  test_chat_workflow_2.1.3.py  test_chat_workflow_2.1.4.py  test_chat_workflow_2.1.5.py  test_chat_workflow_2.1.6.py  test_chat_workflow_2.2.1.py  test_chat_workflow_2.2.2.py  test_codex_parse.py  test_codex_parsing.py  test_consensus_workflow_3.1.1.py  test_consensus_workflow_3.1.2.py  test_consensus_workflow_3.1.3.py  test_consensus_workflow_3.1.4.py  test_consensus_workflow_3.1.5.py  test_consensus_workflow_3.1.6.py  (+18 more)
.claude-plugin/: marketplace.json  plugin.json
model_chorus/: .coverage.Khans-MacBook-Pro.local.14770.XYNexwGx  PHASE_6_REVIEW.md  README.md  THINKDEEP_FIXES.md  fix_thinkdeep_calls.py  pyproject.toml  pytest.ini  task-6-4-fidelity-review.md
model_chorus/docs/workflows/: STUDY.md
model_chorus/examples/: README.md  basic_workflow.py  chat_example.py  provider_integration.py  thinkdeep_example.py
model_chorus/src/model_chorus/: __init__.py
model_chorus/src/model_chorus/cli/: __init__.py  main.py  primitives.py  setup.py  study_commands.py
model_chorus/src/model_chorus/config/: __init__.py  loader.py  models.py
model_chorus/src/model_chorus/core/: __init__.py  base_workflow.py  clustering.py  config.py  context_ingestion.py  contradiction.py  conversation.py  conversation_db.py  gap_analysis.py  models.py  progress.py  prompts.py  registry.py  role_orchestration.py  state.py  workflow_runner.py
model_chorus/src/model_chorus/migrations/: __init__.py  migrate_json_to_sqlite.py
model_chorus/src/model_chorus/providers/: __init__.py  base_provider.py  claude_provider.py  cli_provider.py  codex_provider.py  cursor_agent_provider.py  gemini_provider.py  middleware.py
model_chorus/src/model_chorus/templates/: model_chorus_config.example.yaml
model_chorus/src/model_chorus/utils/: __init__.py  citation_formatter.py
model_chorus/src/model_chorus/workflows/: __init__.py  chat.py  consensus.py  thinkdeep.py
model_chorus/src/model_chorus/workflows/argument/: __init__.py  argument_workflow.py  semantic.py
model_chorus/src/model_chorus/workflows/ideate/: ideate_workflow.py
model_chorus/src/model_chorus/workflows/study/: CLI_REFERENCE.md  MEMORY_AND_LIFECYCLE.md  __init__.py  config.py  context_analysis.py  persona_base.py  persona_router.py  personas.py  state_machine.py  study_workflow.py
model_chorus/src/model_chorus/workflows/study/memory/: __init__.py  cache.py  controller.py  models.py  persistence.py
model_chorus/tests/: README_TESTING.md  conftest.py  test_argument_workflow.py  test_chat_integration.py  test_chat_workflow.py  test_citation.py  test_citation_integration.py  test_claude_provider.py  test_cli_integration.py  test_cli_primitives.py  test_clustering.py  test_codex_provider.py  test_concurrent_conversations.py  test_config.py  test_consensus_provider_models.py  test_consensus_workflow.py  test_context_ingestion.py  test_contradiction.py  test_conversation.py  test_conversation_db.py  test_cursor_agent_provider.py  test_gap_analysis.py  test_gemini_integration.py  test_helpers.py  test_ideate_workflow.py  test_ideate_workflow_integration.py  test_integration.py  test_memory_management.py  test_middleware.py  test_review_response.py  test_role_orchestration.py  test_semantic_similarity.py  test_standardization.py  test_state.py  test_thinkdeep_complex.py  test_thinkdeep_expert_validation.py  test_thinkdeep_models.py  test_thinkdeep_workflow.py  test_token_budgeting.py  test_workflow_integration_chaining.py  (+1 more)
model_chorus/tests/test_providers/: test_cli_interface.py
model_chorus/tests/workflows/study/: test_personas.py  test_routing.py  test_state_machine.py  test_study_workflow.py
model_chorus/tests/workflows/study/memory/: __init__.py  test_cache.py  test_persistence.py
modelchorus/: README.md  pyproject.toml
modelchorus/examples/: README.md  basic_workflow.py  chat_example.py  provider_integration.py  thinkdeep_example.py
modelchorus/src/modelchorus/: __init__.py
modelchorus/src/modelchorus/cli/: __init__.py  main.py  setup.py
modelchorus/src/modelchorus/core/: __init__.py  base_workflow.py  config.py  contradiction.py  conversation.py  gap_analysis.py  models.py  progress.py  registry.py  role_orchestration.py  state.py
modelchorus/src/modelchorus/documents/: __init__.py  models.py  parser.py
modelchorus/src/modelchorus/providers/: __init__.py  anthropic_provider.py  base_provider.py  claude_provider.py  cli_provider.py  codex_provider.py  cursor_agent_provider.py  gemini_provider.py  google_provider.py  openai_provider.py
modelchorus/src/modelchorus/utils/: __init__.py  citation_formatter.py
modelchorus/src/modelchorus/workflows/: __init__.py  chat.py  consensus.py  thinkdeep.py
modelchorus/src/modelchorus/workflows/argument/: __init__.py  argument_workflow.py  semantic.py
modelchorus/src/modelchorus/workflows/ideate/: __init__.py  ideate_workflow.py
modelchorus/src/modelchorus/workflows/research/: __init__.py  research_workflow.py
modelchorus/tests/: __init__.py  conftest.py  test_chat_integration.py  test_chat_workflow.py  test_citation.py  test_claude_provider.py  test_codex_provider.py  test_config.py  test_consensus_workflow.py  test_conversation.py  test_document_parser.py  test_gemini_integration.py  test_ideate_workflow.py  test_integration.py  test_semantic_similarity.py  test_state.py  test_thinkdeep_models.py
(+147 files in other folders)
