[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-chorus"
version = "0.4.0"
description = "Standalone multi-model workflow orchestration engine"
authors = [
    {name = "ModelChorus Contributors"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "llm", "orchestration", "multi-model", "workflows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "typer>=0.16.0,<0.20",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-rerunfailures>=16.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
model-chorus = "model_chorus.cli.main:app"

[project.urls]
Homepage = "https://github.com/tylerburleigh/claude-model-chorus"
Repository = "https://github.com/tylerburleigh/claude-model-chorus"
Issues = "https://github.com/tylerburleigh/claude-model-chorus/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["model_chorus/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "3.9"
asyncio_mode = "auto"
console_output_style = "progress"
addopts = [
    "-v",
    "--cov=model_chorus",
    "--cov-report=term-missing",
    "--strict-markers",
    "--tb=short",
    "--reruns=2",
    "--reruns-delay=1",
    "--only-rerun=CLI command.*timed out",
    "--only-rerun=ProviderUnavailableError",
]
markers = [
    "requires_claude: test requires Claude provider (config enabled + CLI available)",
    "requires_gemini: test requires Gemini provider (config enabled + CLI available)",
    "requires_codex: test requires Codex provider (config enabled + CLI available)",
    "requires_any_provider: test requires at least one provider to be available",
    "integration: integration tests that may require real provider APIs",
    "unit: unit tests that should use mocks",
    "slow: tests that take a long time to run",
    "flaky: mark test as flaky (will be retried automatically)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
